# MultimodalSDK

./: .clang-tidy  .codespellrc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  README_en.md  Third_Party_Open_Source_Software_Notice  mkdocs.yml  presmoke_config.yaml  run_presmoke.sh
AccSDK/: CMakeLists.txt  README.md
AccSDK/acc_data/: .gitignore  CMakeLists.txt  MANIFEST.in  README.md  build.sh  setup.py
AccSDK/acc_data/buildscript/: build_env.sh  build_src.sh  run_dt.sh
AccSDK/acc_data/src/cpp/: CMakeLists.txt  backend.cpp
AccSDK/acc_data/src/cpp/common/: CMakeLists.txt  accdata_logger.cpp  accdata_logger.h  balance.h  cache_list.h  check.h  singleton.h  string_util.cpp  string_util.h  thread_pool.cpp  thread_pool.h  tracer.h  traits.h  utility.h
AccSDK/acc_data/src/cpp/interface/: accdata_error_code.h  accdata_op_spec.h  accdata_pipeline.h  accdata_tensor.h  logger.h
AccSDK/acc_data/src/cpp/operator/: CMakeLists.txt  op_arg.h  op_factory.h  op_spec.cpp  op_spec.h  operator.h  operator_param_inner.h
AccSDK/acc_data/src/cpp/operator/fusion/: CMakeLists.txt  qwen_args.cpp  qwen_args.h  qwen_fusion_ops.cpp  qwen_fusion_ops.h  to_tensor_resize_crop_normalize.cpp  to_tensor_resize_crop_normalize.h
AccSDK/acc_data/src/cpp/operator/image/: CMakeLists.txt  crop_args.cpp  crop_args.h  resize_args.cpp  resize_args.h  resize_crop.cpp  resize_crop.h  resize_torch_kernel.h  to_tensor.cpp  to_tensor.h  to_tensor_args.cpp  to_tensor_args.h
AccSDK/acc_data/src/cpp/operator/input/: CMakeLists.txt  external_source.cpp  external_source.h
AccSDK/acc_data/src/cpp/operator/math/: CMakeLists.txt  normalize.cpp  normalize.h  normalize_args.cpp  normalize_args.h
AccSDK/acc_data/src/cpp/pipeline/: CMakeLists.txt  accdata_pipeline_impl.cpp  accdata_pipeline_impl.h
AccSDK/acc_data/src/cpp/pipeline/executor/: CMakeLists.txt  executor.cpp  executor.h  simple_executor.cpp  simple_executor.h
AccSDK/acc_data/src/cpp/pipeline/graph/: CMakeLists.txt  graph.cpp  graph.h
AccSDK/acc_data/src/cpp/tensor/: CMakeLists.txt  tensor.cpp  tensor.h  tensor_image.h  tensor_list.h  tensor_view.h
AccSDK/acc_data/src/python/accdata/: __init__.py  data_node.py  pipeline.py  types.py
AccSDK/acc_data/test/cpp/: CMakeLists.txt  main.cpp  run_dt.sh  run_fuzz_test.sh
AccSDK/acc_data/test/cpp/common/: test_accdata_logger.cpp  test_string_utils.cpp
AccSDK/acc_data/test/cpp/conf/: config.yaml  lcovrc
AccSDK/acc_data/test/cpp/fuzz/: fuzz_test_logger.cpp  fuzz_test_op_spec.cpp  fuzz_test_pipeline.cpp  fuzz_test_tensor.cpp  random_utils.h
AccSDK/acc_data/test/cpp/operator/: test_op_arg.cpp  test_op_factory.cpp  test_op_spec.cpp
AccSDK/acc_data/test/cpp/pipeline/: test_pipeline.cpp  test_pipeline_graph.cpp  test_workspace_manager.cpp
AccSDK/acc_data/test/cpp/tensor/: test_tensor.cpp  test_tensor_list.cpp
AccSDK/acc_data/test/python/: pytest.ini  run_dt.sh
AccSDK/acc_data/test/python/benchmark/: normalize_benchmark_test.py  opsora_benchmark_test.py  qwen_benchmark_test.py  resize_crop_benchmark_test.py  to_tensor_benchmark_test.py
AccSDK/acc_data/test/python/conf/: .coveragerc  config.yaml
AccSDK/acc_data/test/python/ut/: __init__.py  external_source_test.py  fused_op_test.py  normalize_test.py  pipeline_test.py  plugin_test.py  qwen_fusion_test.py  resize_crop_test.py  to_tensor_test.py  utils.py
AccSDK/build_script/: build.sh  build_3rdparty.sh  build_acc_data.sh  build_opensource.sh  fetch_acc_data_3rdparty.sh  gen_report.sh  testcases_xml_report.py
AccSDK/include/acc/: ErrorCode.h  Log.h
AccSDK/include/acc/audio/: Audio.h
AccSDK/include/acc/image/: Image.h  ImageFormat.h  ImageOps.h
AccSDK/include/acc/tensor/: Tensor.h  TensorDataType.h  TensorOps.h
AccSDK/include/acc/video/: Video.h
AccSDK/source/: CMakeLists.txt
AccSDK/source/audio/: Audio.cpp  CMakeLists.txt
AccSDK/source/core/: CMakeLists.txt
AccSDK/source/core/framework/: CPUAccelerator.cpp  Pipeline.cpp  XPUAccelerator.cpp
AccSDK/source/core/framework/CPUOps/: Crop.cpp  Normalize.cpp  QwenFusionOperator.cpp  Resize.cpp  ToTensor.cpp
AccSDK/source/fusion_operators/: CMakeLists.txt  FusionOperators.cpp
AccSDK/source/image/: CMakeLists.txt  Image.cpp  ImageOps.cpp
AccSDK/source/inc/acc/fusion_operators/: FusionOperators.h
AccSDK/source/inc/acc/tensor/: OpsBaseChecker.h  OpsCustomChecker.h
AccSDK/source/inc/acc/utils/: AudioUtils.h  ConfigUtils.h  DeviceUtils.h  ErrorCodeUtils.h  FileUtils.h  ImageUtils.h  LogImpl.h  TensorUtils.h  ThreadPool.h  VideoUtils.h
AccSDK/source/py/: CMakeLists.txt
AccSDK/source/py/SwigInterface/: acc.i
AccSDK/source/py/include/: PyAudio.h  PyImage.h  PyLog.h  PyPreprocess.h  PyTensor.h  PyTensorOps.h  PyUtil.h  PyVideo.h
AccSDK/source/py/module/: PyAudio.cpp  PyImage.cpp  PyLog.cpp  PyPreprocess.cpp  PyTensor.cpp  PyTensorOps.cpp  PyUtil.cpp  PyVideo.cpp
AccSDK/source/tensor/: CMakeLists.txt  Tensor.cpp  TensorOps.cpp
AccSDK/source/tensor/checker/: OpsBaseChecker.cpp  OpsCustomChecker.cpp
AccSDK/source/utils/: AudioUtils.cpp  CMakeLists.txt  ErrorCodeUtils.cpp  FileUtils.cpp  ImageUtils.cpp  Log.cpp  TensorUtils.cpp  ThreadPool.cpp  VideoUtils.cpp
AccSDK/source/video/: CMakeLists.txt  Video.cpp
AccSDK/test/: CMakeLists.txt
AccSDK/test/audio/: AudioTest.cpp  CMakeLists.txt
AccSDK/test/core/framework/: CMakeLists.txt  PipelineTest.cpp  XPUAcceleratorTest.cpp
AccSDK/test/data/videos/: video_1min_30fps.avi
AccSDK/test/fusion_operators/: CMakeLists.txt  FusionOperatorsTest.cpp
AccSDK/test/image/: CMakeLists.txt  ImageOpsTest.cpp  ImageTest.cpp
AccSDK/test/py/: CMakeLists.txt  accsdk_pytest.py  test_py_image.py  test_py_log.py  test_py_preprocess.py  test_py_tensor.py  test_py_tensor_ops.py  test_py_utils.py  test_py_video.py
AccSDK/test/tensor/: CMakeLists.txt  OpsCheckerTest.cpp  TensorOpsTest.cpp  TensorTest.cpp
AccSDK/test/utils/: AudioUtilsTest.cpp  CMakeLists.txt  ErrorCodeUtilsTest.cpp  FileUtilsTest.cpp  LogTest.cpp  ThreadPoolTest.cpp  VideoUtilsTest.cpp
AccSDK/test/video/: CMakeLists.txt  VideoTest.cpp
(+217 files in other folders)
