set(TEST_EXECUTABLE "PipelineTest")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/output/core)

file(GLOB_RECURSE COMPILE_TEST_SRC PipelineTest.cpp)
add_executable(${TEST_EXECUTABLE} ${COMPILE_TEST_SRC})
target_link_libraries(${TEST_EXECUTABLE} core gtest)

add_test(NAME ${TEST_EXECUTABLE}
        COMMAND ${TEST_EXECUTABLE}
        WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

set(XPU_ACCELERATOR_TEST_EXECUTABLE "XPUAcceleratorTest")
file(GLOB_RECURSE XPU_ACCELERATOR_TEST_SRC XPUAcceleratorTest.cpp)
add_executable(${XPU_ACCELERATOR_TEST_EXECUTABLE} ${XPU_ACCELERATOR_TEST_SRC})
target_link_libraries(${XPU_ACCELERATOR_TEST_EXECUTABLE} core gtest)

add_test(NAME ${XPU_ACCELERATOR_TEST_EXECUTABLE}
        COMMAND ${XPU_ACCELERATOR_TEST_EXECUTABLE}
        WORKING_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})